--- a/Venus/src/Presentation/Web/Cms/Venus.Presentation.Web.Cms/venus.presentation.web.cms.client/src/index.css
+++ b/Venus/src/Presentation/Web/Cms/Venus.Presentation.Web.Cms/venus.presentation.web.cms.client/src/index.css
@@ -1,3 +1,3 @@
-
-/* Flowbite CSS */
-@import "flowbite";
+@import "tailwindcss";
+@plugin "flowbite-react/plugin/tailwindcss";
+@source "../.flowbite-react/class-list.json";
